# PlyShock

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/backend/: .dockerignore  Dockerfile  README.md  __init__.py  main.py  model_loader.py  pgn_demo.py  schemas.py
app/backend/demo_games/: demo_game_1.pgn  demo_game_2.pgn  demo_game_3.pgn  demo_game_4.pgn  demo_game_5.pgn
app/frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
app/frontend/src/app/: globals.css  page.tsx
app/frontend/src/components/: CheckpointTimeline.tsx  ChessReplayBoard.tsx  CustomPgnPanel.tsx  EvalBar.tsx  GameSelector.tsx  LiveBoardMode.tsx  LiveClockPanel.tsx  LiveEvalPanel.tsx  LiveMoveList.tsx  LiveSetupPanel.tsx  MetricCard.tsx  MoveList.tsx  PlyShockBar.tsx  ReplayControls.tsx  ResearchSummary.tsx  StatusBanner.tsx
docs/research/: literature-notes.md
research/artifacts/metrics/: ablation_results_50k.json  eda_summary_10k.json  eda_summary_50k.json  model_comparison.csv  model_comparison.json  test_predictions.csv
research/tests/: test_ablation.py  test_build_features.py  test_build_filtered_games.py  test_build_snapshots.py  test_clock_parser.py  test_eval_cache.py  test_feature_pipeline.py  test_filters.py  test_model_registry.py  test_package_import.py  test_pgn_reader.py  test_plot_model_results.py  test_run_eda.py  test_snapshot_builder.py  test_stockfish_client.py  test_train_models.py  test_training_split.py  test_write_results_summary.py  test_zst_reader.py
scripts/: export_demo_pgns.py  test_custom_pgn_replay.py
(+25 files in other folders)
